package dev.linnaelle.fs.entities;

public enum TypeEquipement {
    TRACTEUR,
    REMORQUE_STANDARD,
    REMORQUE_SEMI,
    MOISSONNEUSE,
    CHARRUE,
    FERTILISATEUR,
    SEMEUSE,
    MOISSONNEUSE_RAISIN,
    MOISSONNEUSE_OLIVE,
    MOISSONNEUSE_PDT,
    MOISSONNEUSE_BETTERAVE,
    MOISSONNEUSE_COTON,
    MOISSONNEUSE_CANNE,
    MOISSONNEUSE_ARBRE,
    MOISSONNEUSE_EPINARD,
    MOISSONNEUSE_HARICOT_VERT,
    MOISSONNEUSE_POIS,
    MOISSONNEUSE_LEGUMES,
    PLANTEUSE_ARBRE,
    PLANTEUSE_PDT,
    PLANTEUSE_CANNE,
    PLANTEUSE_LEGUMES
}
